--- a/static/stylesheet/bootstrap.stypr.css
+++ b/static/stylesheet/bootstrap.stypr.css
@@ -245,3 +245,30 @@ body {
 .text-pre-wrap {
     white-space: pre-wrap;
 }
+
+.logo-wireguard {
+    z-index:1;
+    filter: grayscale(100%);
+    opacity: 0.1;
+    position: absolute;
+    bottom:-50px;
+    left:-130px;
+}
+
+.logo-cdn {
+    z-index:0;
+    filter: grayscale(100%);
+    opacity: 0.3;
+    position: absolute;
+    bottom:-30px;
+    left:-130px;
+}
+
+.logo-dedicated {
+    z-index:0;
+    filter: grayscale(100%);
+    opacity: 0.2;
+    position: absolute;
+    bottom:-150px;
+    left:-240px;
+}
