--- a/static/stylesheet/bootstrap.stypr.css
+++ b/static/stylesheet/bootstrap.stypr.css
@@ -20,14 +20,14 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2) format('woff2');
+    src: url('/static/fonts/oxygen.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
     font-family: 'SUIT Variable';
     font-weight: 100 900;
-    src: url('https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2') format('woff2-variations');
+    src: url('/static/fonts/SUIT-Variable.woff2') format('woff2-variations');
     font-display: swap;
 }
 
